tests/fixtures/parse-error/src/components/Good.tsx
import { useEffect } from "react";

export function Good() {
  useEffect(() => {}, []);
}
